[package]
name = "sp-consensus-subspace"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Subspace Labs <admin@subspace.network>"]
description = "Primitives for Subspace consensus"
edition = "2021"
license = "Apache-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { version = "0.1.53", optional = true }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus = { version = "0.10.0-dev", optional = true, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus-slots = { version = "0.10.0-dev", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562", default-features = false }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus",
	"sp-consensus-slots/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-timestamp/std",
	"subspace-core-primitives/std",
]
