[package]
name = "subspace-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
description = "Subspace service."
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cirrus-primitives = { version = "0.1.0", path = "../../cumulus/primitives" }
derive_more = "0.99.17"
frame-support = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
futures = "0.3.21"
jsonrpc-core = "18.0.0"
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-consensus-subspace = { version = "0.1.0", path = "../sc-consensus-subspace" }
sc-consensus-subspace-rpc = { version = "0.1.0", path = "../sc-consensus-subspace-rpc" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-consensus-uncles = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus-subspace = { version = "0.1.0", path = "../sp-consensus-subspace" }
sp-core = { version = "6.0.0", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-executor = { version = "0.1.0", path = "../sp-executor" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-runtime = { version = "6.0.0", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-trie = { version = "6.0.0", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
subspace-fraud-proof = { version = "0.1.0", path = "../subspace-fraud-proof" }
subspace-runtime-primitives = { version = "0.1.0", path = "../subspace-runtime-primitives" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
substrate-prometheus-endpoint = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
thiserror = "1.0.30"

sp-session = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }

[features]
default = []
