[package]
name = "cirrus-client-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sc-client-api = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-consensus = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-transaction-pool-api = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-utils = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-api = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-blockchain = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-block-builder = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus-slots = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-core = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-keystore = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-runtime = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-trie = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "3.1.2", features = [ "derive" ] }
crossbeam = "0.8.1"
futures = { version = "0.3.21", features = ["compat"] }
futures-timer = "3.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
merkletree = "0.21.0"
parking_lot = "0.12.0"
tracing = "0.1.34"
thiserror = "1.0.29"
tokio = "1.17.0"

cirrus-block-builder = { path = "../block-builder" }
cirrus-client-executor-gossip = { path = "../executor-gossip" }
cirrus-primitives = { path = "../../primitives" }
sp-executor = { path = "../../../crates/sp-executor" }
subspace-fraud-proof = { path = "../../../crates/subspace-fraud-proof" }
subspace-core-primitives = { path = "../../../crates/subspace-core-primitives" }
subspace-runtime-primitives = { path = "../../../crates/subspace-runtime-primitives" }

# Ugly workaround for https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(any(target_os = "linux", target_os = "macos", all(target_os = "windows", target_env = "gnu")))'.dependencies.sha2]
features = ["asm"]
version = "0.10.2"

# Ugly workaround for https://github.com/rust-lang/cargo/issues/1197
# `asm` feature is not supported on Windows except with GNU toolchain
[target.'cfg(not(any(target_os = "linux", target_os = "macos", all(target_os = "windows", target_env = "gnu"))))'.dependencies.sha2]
version = "0.10.2"

[dev-dependencies]
cirrus-test-service = { path = "../../test/service" }
pallet-balances = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-cli = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-keyring = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-state-machine = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
substrate-test-runtime = { path = "../../../substrate/substrate-test-runtime" }
substrate-test-runtime-client = { path = "../../../substrate/substrate-test-runtime-client" }
substrate-test-utils = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
