[package]
name = "cirrus-test-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[dependencies]
async-trait = "0.1.42"
futures = "0.3.21"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["macros"] }
tracing = "0.1.34"

# Substrate
frame-system = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
pallet-transaction-payment = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-client-api = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-consensus = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-executor = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-network = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-rpc = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-service = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-tracing = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-utils = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sc-transaction-pool = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-arithmetic = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-blockchain = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-core = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-keyring = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-inherents = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-runtime = { git = "https://github.com/koute/substrate", default-features = false, rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-timestamp = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-trie = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
substrate-test-client = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }

# RPC related dependencies
jsonrpc-core = "18.0.0"

cirrus-client-executor = { path = "../../client/cirrus-executor" }
cirrus-client-executor-gossip = { path = "../../client/executor-gossip" }
cirrus-test-runtime = { path = "../runtime" }
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }

subspace-runtime-primitives = { path = "../../../crates/subspace-runtime-primitives" }
subspace-service = { path = "../../../crates/subspace-service" }
subspace-test-client = { path = "../../../test/subspace-test-client" }
subspace-test-runtime = { path = "../../../test/subspace-test-runtime" }
subspace-test-service = { path = "../../../test/subspace-test-service" }

[dev-dependencies]
futures = "0.3.21"
