[package]
name = "cumulus-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.53"
cumulus-client-consensus-common = { path = "../common" }
sc-consensus = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-blockchain = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-consensus = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-core = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
sp-runtime = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
substrate-prometheus-endpoint = { git = "https://github.com/koute/substrate", rev = "1a8343ff5a7d2060c8a03ecd04768b225abe0562" }
